syntax = "proto3";

package SystemProto;

message BanRequest {
	int32 operatorId = 1;
	string victim = 2;
	int32 banLevel = 3;
	string reasonDesc = 4;
	int32 reason = 5;
	int32 days = 6;
}

message BanResponse {
	int32 code = 1;
	BanRequest request = 2;
	string operatorName = 3;
	int32 victimId = 4;
}


message UnbanRequest {
	int32 operatorId = 1;
	string victim = 2;
}

message UnbanResponse {
	int32 code = 1;
	UnbanRequest request = 2;
}

message SetGmLevelRequest {
	int32 operatorId = 1;
	string targetName = 2;
	int32 level = 3;
}

message SetGmLevelResponse {
	int32 code = 1;
	SetGmLevelRequest request = 2;
	int32 targetId = 3;
}

message OnlinedPlayerInfoDto {
	int32 id = 1;
	string name = 2;
	int32 channel = 3;
	int32 mapId = 4;
}

message ShowOnlinePlayerResponse {
	repeated OnlinedPlayerInfoDto list = 1;
}

message WrapPlayerByNameRequest {
	int32 masterId = 1;
	string victim = 2;
}

message WrapPlayerByNameResponse {
	int32 code = 1;
	WrapPlayerByNameRequest request = 2;
	int32 targetChannel = 3;
}

message SummonPlayerByNameRequest {
	int32 masterId = 1;
	string victim = 2;
}

message SummonPlayerByNameResponse {
	int32 code = 1;
	SummonPlayerByNameRequest request = 2;
	int32 victimId = 3;
	string warpToName = 4;
	int32 warpToChannel = 5;
}



message DisconnectPlayerByNameRequest {
	int32 masterId = 1;
	string victim = 2;
}

message DisconnectPlayerByNameResponse {
	int32 code = 1;
	DisconnectPlayerByNameRequest request =2;
	int32 targetId = 3;
}

message DisconnectAllRequest {
	int32 masterId = 1;
}

message DisconnectAllBroadcast {
	int32 exceptId = 1;
}
